layout code mod

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,8 @@
 @theme {
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-  --color-brand: #ff1615;
+  /* --color-brand: #ff1615; */
+  --color-brand: #00103f;
   --color-border: #d4d4d8;
 }
 
